--- a/doc/man/garrycoin-tx.1
+++ b/doc/man/garrycoin-tx.1
@@ -116,7 +116,7 @@ Copyright (C) 2009-2017 The Bitcoin Core developers
 Copyright (C) 2011-2017 The garrycoind Core developers
 
 Please contribute if you find garrycoind Core useful. Visit
-<https://faithco.in> for further information about the software.
+<https://garryco.in> for further information about the software.
 The source code is available from <https://github.com/garrycoin-project/garrycoin>.
 
 This is experimental software.
